--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "node-sass-chokidar": "^1.3.3",
-    "npm-run-all": "^4.1.3",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "node-sass-chokidar": "~1.3.3",
+    "npm-run-all": "~4.1.3",
+    "react": "~16.4.2",
+    "react-dom": "~16.4.2",
     "react-scripts": "1.1.5"
   },
   "scripts": {
@@ -18,5 +18,8 @@
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "react-router-dom": "~4.3.1"
   }
 }
