--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "font-awesome": "^4.7.0"
   }
 }
